# dapp

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
app/: settings.py  urls.py
works/: admin.py  models.py  serializers.py  urls.py  views.py
works/migrations/: 0001_initial.py
